--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "typescript": "^3.8.0"
   },
   "dependencies": {
-    "react-bootstrap": "^1.0.1"
+    "@material-ui/core": "^4.10.2"
   }
 }
