--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "prettier": "^2.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "snowpack": "^2.0.0",
+    "snowpack": "^2.5.1",
     "typescript": "^3.8.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.10.1"
+    "@material-ui/core": "^4.10.1",
+    "react-material-ui-carousel": "^1.5.2"
   }
 }
