--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.10.1",
-    "react-material-ui-carousel": "^1.5.2"
+    "react-material-ui-carousel": "^1.5.2",
+    "react-tsparticles": "^1.16.1"
   }
 }
