--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "build": "snowpack build",
     "test": "jest",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'"
+    "lint": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
+    "bundle:*": "@snowpack/plugin-webpack"
   },
   "devDependencies": {
     "@snowpack/app-scripts-react": "^1.0.6",
+    "@snowpack/plugin-webpack": "^1.4.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
     "@types/react": "^16.9.35",
