--- a/package.json
+++ b/package.json
@@ -5,21 +5,36 @@
     "test": "jest",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "lint": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
-    "bundle:*": "@snowpack/plugin-webpack"
+    "bundle:*": "@snowpack/plugin-webpack",
+    "prebuild-webpack": "rimraf ./build && mkdir build",
+    "build-webpack": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@babel/runtime": "^7.10.4",
     "@snowpack/app-scripts-react": "^1.0.6",
     "@snowpack/plugin-webpack": "^1.4.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "jest": "^25.4.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "snowpack": "^2.5.1",
-    "typescript": "^3.8.0"
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.8.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@material-ui/core": "^4.10.1",
