--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "snowpack": "^2.5.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.8.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12"
   },
