--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,45 +1,23 @@
 {
-  "include": [
-    "src",
-    "types"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
-  "extends": "@snowpack/app-scripts-react/tsconfig.base.json",
   "compilerOptions": {
-    // You can't currently define paths in your 'extends' config,
-    // so we have to set 'baseUrl' & 'paths' here.
-    // Don't change these unless you know what you're doing.
-    // See: https://github.com/microsoft/TypeScript/issues/25430
-    "baseUrl": "./",
-    "paths": {
-      "*": [
-        "web_modules/.types/*"
-      ],
-    },
-    "resolveJsonModule": true,
-    // Feel free to add/edit new config options below:
-    // ...
-    // "sourceMap": true,
-    "outDir": "./build/",
-    "noImplicitAny": false,
-    "module": "es2015",
-    "target": "esnext",
     "lib": [
-      "es2015",
       "dom",
-      "DOM.Iterable",
-      "es5",
-      "es6",
+      "dom.iterable",
       "esnext"
     ],
-    "strict": false,
-    //do not emit files - let babel handle
-    "noEmit": false,
-    // "removeComments": true,
-    // "allowSyntheticDefaultImports": false,
-    // "jsx": "react",
-    // "allowJs": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react"
   },
+  "include": [
+    "src"
+  ]
 }
