--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ts-loader": "^7.0.5",
     "typescript": "^3.8.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12"
   },
