--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
   ],
   "extends": "@snowpack/app-scripts-react/tsconfig.base.json",
   "compilerOptions": {
+    "jsx": "react",
     // You can't currently define paths in your 'extends' config,
     // so we have to set 'baseUrl' & 'paths' here.
     // Don't change these unless you know what you're doing.
