--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
+    "postcss-loader": "^6.1.1",
     "react-responsive-carousel": "^3.2.20",
     "react-tsparticles": "^1.32.0"
   }
