--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,17 @@
 {
     "presets": [
         "@babel/preset-env",
-        "@babel/preset-react",
+        [
+            "@babel/preset-react",
+            {
+                "runtime": "automatic"
+            }
+        ],
         "@babel/preset-typescript"
     ],
+
+    // from what I understant this allows me to use async await and promise and library stuff
+    // https://stackoverflow.com/questions/33527653/babel-6-regeneratorruntime-is-not-defined
     "plugins": [
         [
             "@babel/plugin-transform-runtime",
