--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "start": "webpack serve --open --mode development",
+    "start": "webpack serve --config webpack/webpack.config.js --env env=dev --open",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "test": "jest",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "lint": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
-    "prebuild-webpack": "rimraf ./build && mkdir build",
-    "build-webpack": "webpack --config webpack.prod.js"
+    "prebuild-webpack": "rimraf ./build && mkdir build"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@babel/runtime": "^7.14.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/react": "^17.0.15",
@@ -30,8 +31,6 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.36.0",
-    "sass-loader": "^12.1.0",
     "ts-loader": "^9.2.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
@@ -45,6 +44,7 @@
     "@material-ui/icons": "^4.11.2",
     "postcss-loader": "^6.1.1",
     "react-responsive-carousel": "^3.2.20",
-    "react-tsparticles": "^1.32.0"
+    "react-tsparticles": "^1.32.0",
+    "style-loader": "^3.2.1"
   }
 }
