--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.5",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
