--- a/package.json
+++ b/package.json
@@ -1,51 +1,26 @@
 {
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev --open",
-    "build": "webpack --config webpack/webpack.config.js --env env=prod",
-    "test": "jest",
+    "start": "bun run scripts/dev.ts",
+    "build": "bun run scripts/build.ts",
+    "test": "bun test",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
-    "prebuild-webpack": "rimraf ./build && mkdir build"
+    "lint": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.14.8",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
     "@babel/runtime": "^7.14.8",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^3.11.5",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.0.6",
-    "mini-css-extract-plugin": "^2.1.0",
     "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "ts-loader": "^9.2.4",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.46.0",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
-    "postcss-loader": "^6.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.20",
-    "react-tsparticles": "^1.32.0",
-    "style-loader": "^3.2.1"
+    "react-tsparticles": "^1.32.0"
   }
 }
